//升级版本号到----6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias 'wuding1234'
-            keyPassword 'wuding1234'
-            storePassword 'wuding1234'
-            storeFile file('D:/SDK/app.jks')
+            keyAlias 'wanggaowu'
+            keyPassword 'wAngaowu22'
+            storePassword 'wAngaowu22'
+            storeFile file('D:/SDK/keystore.jks')
         }
     }
     buildTypes {
